--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
+body{
+    background-color: #0f2b47;
+}
 .header{
-    background: rgba(231, 231, 231, 0.589) !important;
+    background: rgba(231, 231, 231, 0) !important;
     box-shadow: 0 4px 30px rgb(0 0 0 / 10%) !important;
     backdrop-filter: blur(9.2px) !important;
 }
@@ -19,12 +22,12 @@
     margin-top: 5px;
     font-size: 20px;
 }
-.header .container .item ul li .active{color: #4921db;}
+.header .container .item ul li .active{color: #6034ff;}
 .header .container .item ul li a{
     font-weight: 600;
     font-size: 13px;
     text-decoration: none !important;
-    color: rgba(0, 0, 0, 0.637);
+    color: rgba(231, 231, 231, 0.637);
     border-bottom:none ;
 }
 
@@ -72,7 +75,7 @@
     margin-top: 20px;
 }
 .section-one .row .review-details{
-    border-bottom: 1px solid rgba(54, 54, 54, 0.103);
+    border-bottom: 1px solid rgba(212, 210, 210, 0.103);
 }
 .section-one .row .review-details .tab-content .box .item{
     margin: 13px;
@@ -100,7 +103,7 @@
 margin-right: 0;
     font-weight: 600;
     font-size: 12px;
-    color: #4921db;
+    color: #6034ff;
     text-decoration: none;
 
 }
@@ -109,14 +112,20 @@ margin-right: 0;
     border-top:transparent !important;
     border-left: transparent !important;
     border-right: transparent !important;
-border-bottom: 3px solid #4921db;
+border-bottom: 3px solid #6034ff !important;
 }
-
+.section-one .row .review-details .nav .nav-item .active{
+    background-color: transparent !important;
+}
+.section-one .row .review-details .nav .nav-item .nav-link{
+    outline: none !important;
+    border-color: transparent;
+}
 .section-one .row .review-details .nav .nav-item .nav-link {
 	font-size: 15px;
 	font-family: var(--ff2);
 	font-weight: 600;
-	color: rgb(59, 59, 59);
+	color: rgb(228, 222, 222);
 	text-align: left !important;
 	padding-right: 15px;
 	padding-left: 0px;
@@ -130,6 +139,7 @@ border-bottom: 3px solid #4921db;
 }
 
 .section-two .container .head h4{
+    color: rgb(224, 219, 253);
     font-size: 15px;
     font-weight: 600;
     margin-bottom: 15px;
@@ -156,13 +166,13 @@ border-bottom: 3px solid #4921db;
 .section-two .container .body .banner-slider1 .item .item-one .text h5{
 font-size: 13px;
 font-weight: 600;
-color: black;
+color: rgb(255, 255, 255);
 
 }
 .section-two .container .body .banner-slider1 .item .item-one .text p{
 font-size: 13px;
 font-weight: 500;
-color: rgba(71, 71, 71, 0.678);
+color: rgba(212, 212, 212, 0.678);
 
 }
 
@@ -200,7 +210,7 @@ color: rgba(71, 71, 71, 0.678);
 .footer .box ul li a{
 
     text-align: center;
-    color: #212529;
+    color: #dddddd;
 }
 .footer .box ul li .active{
 
