--- a/css/style.css
+++ b/css/style.css
@@ -38,17 +38,18 @@ body{
 }
 
 .header .container .search .form-control {
-    margin-left: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	margin-left: 10px;
 	display: block;
 	width: 94%;
 	padding: .375rem 1.9rem !important;
 	font-size: 1rem;
 	font-weight: 400;
 	line-height: 1.5;
-	color: #212529;
-	background-color: #fff;
+	color: #d4d4d4;
+	background-color: #ffffff0a;
 	background-clip: padding-box;
-	border: 1px solid #ced4da;
+	border: 1px solid #ced4da1f;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
