--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ body{
     font-weight: 600;
     text-align: center;
     font-size: 12px;
+    color: #d4d4d4;
 }
 .section-one .row .review-details .tab-content .box .item .img{
     display: flex;
